--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,2 @@
-# INFURA_URL=https://mainnet.infura.io/v3/KEY_HERE
+CONTRACT=0xe4cfae3aa41115cb94cff39bb5dbae8bd0ea9d41
+INFURA_URL=https://mainnet.infura.io/v3/KEY_HERE
